# Gerrys-Game

./: .gitignore  README.md
backend/: .dockerignore  Application.db  Dockerfile  config.py  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  models.py
backend/app/api/: __init__.py  leaderboard.py  quizzes.py  rooms.py  util.py
backend/app/auth/: views.py
backend/app/data_collections/: governments.json  jobs.json  loader.py
backend/app/websocket/: GameSession.py  QuizSession.py  game_session.py  sockets.py
backend/tests/: test_balance_books.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.vue  http-common.js  main.js
frontend/src/common/: config.js
frontend/src/components/: SpinWheel.vue
frontend/src/components/helpers/: ClickToEdit.vue
frontend/src/components/user/: LoginForm.vue  RegisterForm.vue
frontend/src/composables/: useSocket.js
frontend/src/router/: index.js
frontend/src/services/: ApiService.js  AuthenticationService.js  LeaderboardService.js  QuizService.js  RoomListService.js
frontend/src/store/: auth.module.js  index.js
frontend/src/views/: Home.vue  Login.vue  MyQuizzes.vue  Profile.vue  Room.vue  RoomList.vue
