[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "David",email = "dszedlak@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.13"
Flask = "^2.3.2"
Flask-Cors = "^4.0.0"
Flask-JWT-Extended = "^4.5.2"
Flask-RESTful = "^0.3.10"
Flask-SocketIO = "^5.3.4"
Flask-SQLAlchemy = "^3.0.5"
SQLAlchemy = "^2.0.19"
SQLAlchemy-Utils = "^0.41.1"
eventlet = "^0.33.3"
cryptography = "^41.0.2"
PyJWT = "^2.8.0"
greenlet = "^2.0.2"
Jinja2 = "^3.1.2"
MarkupSafe = "^2.1.3"
Werkzeug = "^2.3.6"
itsdangerous = "^2.1.2"
cffi = "^1.15.1"
pycparser = "^2.21"
idna = "^3.4"
importlib-metadata = "^6.8.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

